{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 477,
  "lineage": "b4911054-540e-196a-ca96-29c6c59b0e85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ab41f546406aa4b",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:elastic-ip/eipalloc-07ab41f546406aa4b",
            "domain": "vpc",
            "id": "eipalloc-07ab41f546406aa4b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-2-119-137.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.119.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-0995f7b354b76a109",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-0995f7b354b76a109",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0454fb2f3683df389",
            "private_dns": "ip-10-20-4-114.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.4.114",
            "public_ip": "3.109.4.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0798fa2440708e03b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d26ba844b8a3eae",
            "tags": {
              "Enviroment": "Development",
              "Name": "bastion",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "bastion",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "load-balancer-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-04c34d3f62feeed74",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-04c34d3f62feeed74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf0619aedc58ada9",
            "private_dns": "ip-10-20-4-162.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.4.162",
            "public_ip": "65.0.94.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077a5996cdba7ad84",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d26ba844b8a3eae",
            "tags": {
              "Enviroment": "Development",
              "Name": "loadbalancer",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "loadbalancer",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-08a2f48a2683a0f52",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-08a2f48a2683a0f52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a87f714e988e2a85",
            "private_dns": "ip-10-20-5-202.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.5.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0694bed41cdc7eb36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf604dce98fc01c6",
            "tags": {
              "Enviroment": "Development",
              "Name": "master1",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "master1",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.load-balancer-server",
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_master_nodes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-04477b00ed449cf0e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-04477b00ed449cf0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07bf4ffdde365f570",
            "private_dns": "ip-10-20-5-94.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.5.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a02ac169ba89eaa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf604dce98fc01c6",
            "tags": {
              "Enviroment": "Development",
              "Name": "master2",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "master2",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.load-balancer-server",
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_master_nodes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-0c915256cc6e11d40",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-0c915256cc6e11d40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de9df3966ef0a8ba",
            "private_dns": "ip-10-20-5-46.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.5.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f387e2c0c98e60b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf604dce98fc01c6",
            "tags": {
              "Enviroment": "Development",
              "Name": "master3",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "master3",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.load-balancer-server",
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_master_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nfs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-091e5d22f36ff8c5a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-091e5d22f36ff8c5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cf85330965a3efc",
            "private_dns": "ip-10-20-4-174.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.4.174",
            "public_ip": "13.233.90.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e54afc4f32c9c60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d26ba844b8a3eae",
            "tags": {
              "Enviroment": "Development",
              "Name": "nfs",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "nfs",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-081f12d1c78be61fa",
              "sg-0e0a81222ffd0fde4",
              "sg-0fbad92531cb8fc2a"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.Web-traffic",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.nfs",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_nfs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-04098d1ba9cc46732",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-04098d1ba9cc46732",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0866d55906f7c78a9",
            "private_dns": "ip-10-20-5-11.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.5.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e59d9dc6a475fac4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf604dce98fc01c6",
            "tags": {
              "Enviroment": "Development",
              "Name": "worker1",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "worker1",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.load-balancer-server",
            "aws_instance.master-server",
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_master_nodes",
            "null_resource.pause_before_worker_nodes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-06a904f0abc33564d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-06a904f0abc33564d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00666a65e599fec2e",
            "private_dns": "ip-10-20-5-155.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.5.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050c816e6d027e8a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf604dce98fc01c6",
            "tags": {
              "Enviroment": "Development",
              "Name": "worker2",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "worker2",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.load-balancer-server",
            "aws_instance.master-server",
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_master_nodes",
            "null_resource.pause_before_worker_nodes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bb6d83c60fc5f7c",
            "arn": "arn:aws:ec2:ap-south-1:787047727908:instance/i-02f634fc05ff2fe3c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-bucket-access",
            "id": "i-02f634fc05ff2fe3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testing-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d452602b2571ff8d",
            "private_dns": "ip-10-20-5-98.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.5.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e171595eb7423760",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf604dce98fc01c6",
            "tags": {
              "Enviroment": "Development",
              "Name": "worker3",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Enviroment": "Development",
              "Name": "worker3",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3babef1e1870",
              "sg-04c97e1f78d37e557",
              "sg-05ce509de88d8eb6c",
              "sg-0e0a81222ffd0fde4",
              "sg-0fd8412a985894aab"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.load-balancer-server",
            "aws_instance.master-server",
            "aws_security_group.haproxy-sg",
            "aws_security_group.kubernetes",
            "aws_security_group.nat_gateway_sg",
            "aws_security_group.open_access_within_vpc",
            "aws_security_group.ssh",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc",
            "data.aws_iam_instance_profile.s3-access-profile",
            "null_resource.pause_before_master_nodes",
            "null_resource.pause_before_worker_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:internet-gateway/igw-0fc9ba6e078ca3445",
            "id": "igw-0fc9ba6e078ca3445",
            "owner_id": "787047727908",
            "tags": {
              "Name": "dev_public_igw"
            },
            "tags_all": {
              "Name": "dev_public_igw"
            },
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ab41f546406aa4b",
            "association_id": "eipassoc-017d5aad1400d70e4",
            "connectivity_type": "public",
            "id": "nat-02075228c5c89f0bf",
            "network_interface_id": "eni-00a99dcbf4b24d417",
            "private_ip": "10.20.4.185",
            "public_ip": "65.2.119.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d26ba844b8a3eae"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.dev_public_igw",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc9ba6e078ca3445",
            "id": "r-rtb-0e0732d926c824fc51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0732d926c824fc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_public_igw",
            "aws_route_table.dev_public_rt",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:route-table/rtb-0e0732d926c824fc5",
            "id": "rtb-0e0732d926c824fc5",
            "owner_id": "787047727908",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_public_rt"
            },
            "tags_all": {
              "Name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:route-table/rtb-0ab77442c5ccc824a",
            "id": "rtb-0ab77442c5ccc824a",
            "owner_id": "787047727908",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02075228c5c89f0bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.dev_public_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a000d2765f9c387a",
            "route_table_id": "rtb-0ab77442c5ccc824a",
            "subnet_id": "subnet-0bf604dce98fc01c6"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.dev_public_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.dev_subnet_private_1",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06116413a9a8744e1",
            "route_table_id": "rtb-0e0732d926c824fc5",
            "subnet_id": "subnet-03d26ba844b8a3eae"
          },
          "dependencies": [
            "aws_route_table.dev_public_rt",
            "aws_subnet.dev_subnet_public_1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-081f12d1c78be61fa",
            "description": "Allow HTTP and HTPPS ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Everything Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081f12d1c78be61fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 443",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-traffic",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_HTTP-HTTPS"
            },
            "tags_all": {
              "Name": "Allow_HTTP-HTTPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "etcd_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-0549d0c60dd566baa",
            "description": "SEcurity Group for etcd",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0549d0c60dd566baa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "allow etcd client and peer communication",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              }
            ],
            "name": "etcd-sg",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "etcd_security_Group"
            },
            "tags_all": {
              "Name": "etcd_security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "haproxy-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-0fd8412a985894aab",
            "description": "security group for haproxy server",
            "egress": [],
            "id": "sg-0fd8412a985894aab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Allow internal health check",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "haproxy-sg",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haproxy_security_Group"
            },
            "tags_all": {
              "Name": "haproxy_security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-024ed3babef1e1870",
            "description": "Allow kubernetes API server, kubelet, etcd",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Everything Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024ed3babef1e1870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow kubelet communiction",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow kubelet communiction",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow kubelet communiction",
                "from_port": 10252,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10252
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "Kubernetes",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_kubernetes_components"
            },
            "tags_all": {
              "Name": "Allow_kubernetes_components"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-0e0a81222ffd0fde4",
            "description": "Allow NAT GARTEWAY",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Everything Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0a81222ffd0fde4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Allow inbound traffic from VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "NAS-GATEWAY-SG",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_nat_gateway_components"
            },
            "tags_all": {
              "Name": "Allow_nat_gateway_components"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-0fbad92531cb8fc2a",
            "description": "allow nfs traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbad92531cb8fc2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow NFS traffic",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              }
            ],
            "name": "nfs-sg",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nfs_security_Group"
            },
            "tags_all": {
              "Name": "nfs_security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_port_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-005013a4f331e996e",
            "description": "allow traffic on ports 30000-32767",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005013a4f331e996e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "my_security_group",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node_port_Group"
            },
            "tags_all": {
              "Name": "node_port_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "open_access_within_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-04c97e1f78d37e557",
            "description": "security group to open access within vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Allow  Outbound within vpc",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c97e1f78d37e557",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Allow inbound traffic within VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "open_access_within_vpc",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open_access_vpc_security_Group"
            },
            "tags_all": {
              "Name": "open_access_vpc_security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:security-group/sg-05ce509de88d8eb6c",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Everything Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ce509de88d8eb6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "787047727908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_tls"
            },
            "tags_all": {
              "Name": "Allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:subnet/subnet-0bf604dce98fc01c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf604dce98fc01c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787047727908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_subnet_private_1"
            },
            "tags_all": {
              "Name": "dev_subnet_private_1"
            },
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:subnet/subnet-03d26ba844b8a3eae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d26ba844b8a3eae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787047727908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_subnet_public_1"
            },
            "tags_all": {
              "Name": "dev_subnet_public_1"
            },
            "vpc_id": "vpc-041b3e3054f71253f"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787047727908:vpc/vpc-041b3e3054f71253f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-006ccd52887702a20",
            "default_route_table_id": "rtb-034302b5e387cb35c",
            "default_security_group_id": "sg-0804616a8ef2b57b0",
            "dhcp_options_id": "dopt-4ecc7825",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041b3e3054f71253f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034302b5e387cb35c",
            "owner_id": "787047727908",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}